--- a/views/index.haml
+++ b/views/index.haml
@@ -1,10 +1,16 @@
 %html
+  %head
+    %link(type="text/css" rel="stylesheet" href="style.css")
   %body
 
     %form
       %div
         %input#true(name="true_or_false" type="radio")
-          %label True
+          %label(for="false")
+            %span
+            True
       %div
-        %input(name="true_or_false" type="radio")
-          %label False
+        %input#false(name="true_or_false" type="radio")
+          %label(for="true")
+            %span
+            False
